syntax = "proto3";

option go_package = "github.com/Kichiyaki/grpcplayground/pb";

service Playground {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}
